--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,35 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header>Instagram</header>
 
-  Capture and Share the World's Moments
+  <main>
+    <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
+  </main>
 
-  Download on the App Store
-  Get it on Google Play
+  <aside>
+    Download on the App Store
+    Get it on Google Play
+  </aside>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+  </footer>
 </body>
 </html>
