Adding additional CSS styles.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,37 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  <header>Instagram</header>
-
+<body>  
   <main>
-    <h1>Capture and Share the World's Moments</h1>
+    <aside class="phones-img">
+      <img src="images/phones.png" />
+    </aside>
+    <header>
+      <nav>
+        <a href="" alt="Instagram"><img src="images/brand.png" /></a>
+        <button class="btn-home"><img src="images/home.png" />Home</button>
+      </nav>
+    </header>
 
-    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <section>
+      <h1>Capture and Share the World's Moments</h1>
 
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-    <p>Oh yeah, did we mention it's free?</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <aside>        
+        <!-- <img src="images/frame.png" /> -->
+      <img src="images/badge-android.png" />
+    </aside>
+    </section>
+
+    <footer>
+      <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+    </footer>
   </main>
-
-  <aside>
-    Download on the App Store
-    Get it on Google Play
-  </aside>
-
-  <footer>
-    <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>&copy; 2014 Instagram</li>
-  </ul>
-  </footer>
+  <div class="decorative-frame"></div>
 </body>
 </html>
