Laying out most elements, adding CSS.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,17 +6,21 @@
 </head>
 <body>  
   <main>
+    <!-- The aside contains the image of 2 phones. -->
     <aside class="phones-img">
       <img src="images/phones.png" />
     </aside>
+    <!-- The header contains the Instagram logo and the Log In button. -->
     <header>
       <nav>
-        <a href="" alt="Instagram"><img src="images/brand.png" /></a>
-        <button class="btn-home"><img src="images/home.png" />Home</button>
+        <a href="" alt="Instagram">
+          <img src="images/brand.png" />
+        </a>
+        <button class="btn-home"><img src="images/home.png" />Log in</button>
       </nav>
     </header>
-
-    <section>
+    <!-- The section contains the h1 and paragraphs. -->
+    <section class="text-blurb">
       <h1>Capture and Share the World's Moments</h1>
 
       <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
@@ -25,22 +29,24 @@
 
       <p>Oh yeah, did we mention it's free?</p>
 
+      <!-- The aside contains the Apple and Google play logos. -->
       <aside>        
         <!-- <img src="images/frame.png" /> -->
-      <img src="images/badge-android.png" />
-    </aside>
+        <img src="images/badge-iphone.png" />
+        <img src="images/badge-android.png" />
+      </aside>
     </section>
 
     <footer>
       <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
       <li>&copy; 2014 Instagram</li>
     </ul>
     </footer>
