--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,7 +7,7 @@
 <body>  
   <main>
     <!-- The aside contains the image of 2 phones. -->
-    <aside class="phones-img">
+    <aside class="two-phones">
       <img src="images/phones.png" />
     </aside>
     <!-- The header contains the Instagram logo and the Log In button. -->
@@ -16,41 +16,42 @@
         <a href="" alt="Instagram">
           <img src="images/brand.png" />
         </a>
-        <button class="btn-home"><img src="images/home.png" />Log in</button>
+        <button class="btn-home"><img src="images/home.png" /> Log in</button>
       </nav>
     </header>
     <!-- The section contains the h1 and paragraphs. -->
     <section class="text-blurb">
       <h1>Capture and Share the World's Moments</h1>
 
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Instagram is a <span class="emphasis">fast</span>, <span class="emphasis">beautiful</span> and <span class="emphasis">fun</span> way to share your life with friends and family.</p>
 
       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
       <p>Oh yeah, did we mention it's free?</p>
-
-      <!-- The aside contains the Apple and Google play logos. -->
-      <aside>        
-        <!-- <img src="images/frame.png" /> -->
-        <img src="images/badge-iphone.png" />
-        <img src="images/badge-android.png" />
-      </aside>
     </section>
-
+    <!-- The aside contains the Apple and Google play logos. -->
+    <aside class="store-btns">        
+      <!-- <img src="images/frame.png" /> -->
+      <img src="images/badge-iphone.png" />
+      <img src="images/badge-android.png" />
+    </aside>
     <footer>
-      <ul>
-      <li><a href="">About Us</a></li>
-      <li><a href="">Support</a></li>
-      <li><a href="">Blog</a></li>
-      <li><a href="">Press</a></li>
-      <li><a href="">API</a></li>
-      <li><a href="">Jobs</a></li>
-      <li><a href="">Privacy</a></li>
-      <li><a href="">Terms</a></li>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
+      <nav>
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
     </footer>
   </main>
+  
   <div class="decorative-frame"></div>
 </body>
 </html>
