Moving files around, slight tweak to CSS.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- The aside contains the Apple and Google play logos. -->
     <aside class="store-btns">        
       <!-- <img src="images/frame.png" /> -->
-      <img src="images/badge-iphone.png" />
-      <img src="images/badge-android.png" />
+      <a href=""><img src="images/badge-iphone.png" /></a>
+      <a href=""><img src="images/badge-android.png" /></a>
     </aside>
     <footer>
       <nav>
